--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "1.15.2",
     "express": "4.14.0",
     "gulp": "^3.9.1",
+    "gulp-webp": "^2.3.0",
     "nunjucks": "3.0.0"
   }
 }
