--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.0.3",
+    "gulp-imagemin": "^3.1.1",
     "ngrok": "2.2.6",
     "nodemon": "1.11.0"
   },
   "dependencies": {
     "body-parser": "1.15.2",
     "compression": "^1.6.2",
+    "critical": "^0.8.4",
     "express": "4.14.0",
     "nunjucks": "3.0.0"
   }
